--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,49 +8,47 @@
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
     tools:context=".LogInFragment"
+    android:backgroundTint="@color/transparent"
+
     >
 
-    <EditText
-        android:id="@+id/editTextTextEmailAddress"
-
-        style="@style/txt"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded"
-        android:gravity="clip_horizontal"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        />
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/transparent">
 
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        style="@style/txt"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/rounded"
-        android:ems="10"
-        android:gravity="clip_horizontal"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />
+        <EditText
+            android:id="@+id/editTextTextEmailAddress"
+          style="@style/txtFields"
+            android:drawableStart="@drawable/email_icon"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        style="@style/btnPrimary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-        tools:layout_editor_absoluteY="270dp" />
+        <EditText
+            android:id="@+id/editTextTextPassword"
+            android:layout_marginTop="24dp"
+            android:drawableStart="@drawable/password_icon"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            style="@style/txtFields"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/button"
+            style="@style/btnPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="42dp"
+            android:text="@string/login"
+            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
