--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupFragment" >
+    tools:context=".SignupFragment"
+    android:backgroundTint="@color/transparent_extra"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/transparent">
+        android:backgroundTint="@color/transparent_extra"
+        >
 
         <EditText
             android:id="@+id/editTextTextEmailAddress"
