--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,10 +20,14 @@
 
     <style name="txtFields">
         <item name="android:layout_width">match_parent</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="backgroundTint">@color/white</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">44dp</item>
         <item name="android:background">@drawable/rounded</item>
         <item name="android:drawablePadding">12dp</item>
+        <item name="android:textColor">@color/icon_color</item>
+        <item name="elevation">8dp</item>
         <item name="android:foregroundGravity">center</item>
         <item name="android:gravity">clip_horizontal</item>
         <item name="android:paddingStart">20dp</item>
