--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -7,7 +7,7 @@
     android:background="@color/neutral"
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
-    tools:context=".LogInFragment"
+    tools:context=".auth.LogInFragment"
     android:backgroundTint="@color/transparent_extra"
     android:elevation="0dp"
 
