--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background"
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
-    tools:context=".AuthActivity">
+    tools:context=".auth.AuthActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -28,9 +28,9 @@
             android:backgroundTint="@color/transparent_extra">
 
             <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerView3"
+                android:id="@+id/fragmentContainerId"
                 android:background="@color/transparent_extra"
-                android:name="com.example.foodplanner.LogInFragment"
+                android:name="com.example.foodplanner.auth.LogInFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
@@ -54,7 +54,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/logninBtn"
                     style="@style/btnPrimary"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -63,7 +63,7 @@
                     android:textColor="@color/black" />
 
                 <Button
-                    android:id="@+id/button5"
+                    android:id="@+id/signupBtn"
                     style="@style/btnSecondary"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
