--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="icon_color">#B7B7B7</color>
     <color name="success">#24D436</color>
     <color name="failure">#CC2803</color>
+    <color name="onbarding">#FAAA34</color>
 
 
 </resources>
