create bottom navigation bar and profile ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="transparent">#FFFFFFFF02</color>
+
+    <color name="transparent">#02FFFFFF</color>
     <color name="primary">#FF9900</color>
     <color name="neutral">#F5F5F5</color>
     <color name="icon_color">#B7B7B7</color>
     <color name="success">#24D436</color>
     <color name="failure">#CC2803</color>
+    <color name="dark">#454749</color>
 
 
 </resources>
