--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,21 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+
+    <style name="black14">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="white14">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
     <style name="btnPrimary">
         <item name="backgroundTint">#FF9900</item>
         <item name="cornerRadius">8dp</item>
         <item name="android:padding">16dp</item>
-
     </style>
 
     <style name="btnSecondary">
@@ -32,5 +42,16 @@
         <item name="android:textColorHint">@color/icon_color</item>
     </style>
 
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/icon_color</item>
+        <item name="colorControlActivated">@color/primary</item>
+    </style>
+
+    <style name="addToFavBtn">
+        <item name="backgroundTint">#FF9900</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="android:padding">8dp</item>
+    </style>
 
 </resources>
