--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -19,7 +19,7 @@
         android:backgroundTint="@color/transparent_extra">
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/email_login_txtField"
             style="@style/txtFields"
             android:drawableStart="@drawable/email_icon"
             android:hint="@string/email"
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/password_login_txtField"
             android:layout_marginTop="24dp"
             android:drawableStart="@drawable/password_icon"
             android:hint="@string/password"
@@ -37,19 +37,19 @@
             style="@style/txtFields"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+            app:layout_constraintTop_toBottomOf="@+id/email_login_txtField" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/logToHomeBtn"
             style="@style/btnPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="42dp"
             android:text="@string/login"
-            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
+            app:layout_constraintEnd_toEndOf="@+id/password_login_txtField"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+            app:layout_constraintStart_toStartOf="@+id/password_login_txtField"
+            app:layout_constraintTop_toBottomOf="@+id/password_login_txtField" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
