--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/mealImg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -64,7 +64,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/mealName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="52dp"
@@ -74,26 +74,26 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/mealCountry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:text="TextView"
-                    app:layout_constraintEnd_toEndOf="@+id/textView6"
+                    app:layout_constraintEnd_toEndOf="@+id/mealName"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                    app:layout_constraintTop_toBottomOf="@+id/mealName" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/mealDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:text="TextView"
-                    app:layout_constraintEnd_toEndOf="@+id/textView7"
+                    app:layout_constraintEnd_toEndOf="@+id/mealCountry"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                    app:layout_constraintTop_toBottomOf="@+id/mealCountry" />
 
                 <RatingBar
                     android:id="@+id/ratingBar"
@@ -101,10 +101,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="48dp"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView8"
+                    app:layout_constraintEnd_toEndOf="@+id/mealDescription"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/textView5"
-                    app:layout_constraintTop_toBottomOf="@+id/textView8" />
+                    app:layout_constraintTop_toBottomOf="@+id/mealDescription" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -114,6 +114,7 @@
                 android:text="@string/ingredients" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ingredientsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -123,11 +124,12 @@
                 android:text="@string/steps" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/stepsRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
             <VideoView
-                android:id="@+id/videoView2"
+                android:id="@+id/mealVideo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
