--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -44,12 +44,12 @@
             style="@style/btnPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="4dp"
             android:text="@string/signup"
-            app:layout_constraintEnd_toEndOf="@+id/confirmPass_signup_txtField"
-            app:layout_constraintHorizontal_bias="0.464"
-            app:layout_constraintStart_toStartOf="@+id/confirmPass_signup_txtField"
-            app:layout_constraintTop_toBottomOf="@+id/confirmPass_signup_txtField" />
+            app:layout_constraintEnd_toEndOf="@+id/button"
+            app:layout_constraintHorizontal_bias="0.513"
+            app:layout_constraintStart_toStartOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
 
         <EditText
             android:id="@+id/name_signup_txtField"
@@ -74,6 +74,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/password_signup_txtField"
             app:layout_constraintTop_toBottomOf="@+id/password_signup_txtField" />
+
+        <Button
+            android:id="@+id/button"
+            style="@style/btnPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/signupwithgoogle"
+            app:layout_constraintEnd_toEndOf="@+id/confirmPass_signup_txtField"
+            app:layout_constraintHorizontal_bias="0.432"
+            app:layout_constraintStart_toStartOf="@+id/confirmPass_signup_txtField"
+            app:layout_constraintTop_toBottomOf="@+id/confirmPass_signup_txtField" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
