--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="transparent">#60FFFFFF </color>
     <color name="transparent_extra">#10FFFFFF </color>
+    <color name="black_transparent_extra">#70000000 </color>
 
     <color name="primary">#FF9900</color>
     <color name="neutral">#F5F5F5</color>
