--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -81,7 +81,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/neutral"
             android:text="@string/signupwithgoogle"
+            android:textColor="@color/icon_color"
             app:layout_constraintEnd_toEndOf="@+id/confirmPass_signup_txtField"
             app:layout_constraintHorizontal_bias="0.432"
             app:layout_constraintStart_toStartOf="@+id/confirmPass_signup_txtField"
