--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MealDetailsActivity">
+    tools:context=".MealDeails.view.MealDetailsActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -96,7 +96,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/mealCountry" />
 
                 <RatingBar
-                    android:id="@+id/ratingBar"
+                    android:id="@+id/ratingBar_card"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="48dp"
