--- a/app/src/main/res/layout/meal_card.xml
+++ b/app/src/main/res/layout/meal_card.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mealCard"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:backgroundTint="@color/white"
+    android:elevation="16dp"
     app:cardBackgroundColor="@color/neutral"
     app:cardCornerRadius="32dp"
     app:cardPreventCornerOverlap="false"
@@ -18,10 +19,10 @@
         app:cardCornerRadius="24dp">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:background="@drawable/rounded"
-            android:layout_width="0dp"
+            android:id="@+id/card_meal_img"
+            android:layout_width="150dp"
             android:layout_height="150dp"
+            android:background="@drawable/rounded"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
             android:textSize="24dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toBottomOf="@+id/card_meal_img" />
 
         <TextView
             android:id="@+id/meal_card_category"
@@ -52,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@id/meal_card_title" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/ratingBar_card"
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -64,7 +65,7 @@
             app:layout_constraintTop_toTopOf="@+id/meal_card_category" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/card_add_to_fav"
             style="@style/addToFavBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
