--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -51,17 +51,9 @@
                     android:id="@+id/textView4"
                     style="@style/textViews"
                     android:layout_marginTop="12dp"
-                    android:text="@string/description"
+                    android:text="@string/category"
                     app:layout_constraintStart_toStartOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    style="@style/textViews"
-                    android:layout_marginTop="12dp"
-                    android:text="@string/rating"
-                    app:layout_constraintStart_toStartOf="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
                 <TextView
                     android:id="@+id/mealName"
@@ -70,6 +62,7 @@
                     android:layout_marginStart="52dp"
                     android:layout_marginTop="4dp"
                     android:text="TextView"
+                    android:textAlignment="center"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,17 +87,6 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/mealCountry" />
-
-                <RatingBar
-                    android:id="@+id/ratingBar_card"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="48dp"
-                    android:layout_marginTop="12dp"
-                    app:layout_constraintEnd_toEndOf="@+id/mealDescription"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView5"
-                    app:layout_constraintTop_toBottomOf="@+id/mealDescription" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
