--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.foodplanner.appNavigation.search.SearchFragment"
+        android:name="com.example.foodplanner.appNavigation.search.view.SearchFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search" />
     <fragment
