--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,26 +23,26 @@
             android:editable="false"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            app:layout_constraintStart_toStartOf="@+id/usernameEditText"
-            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
+            app:layout_constraintStart_toStartOf="@+id/profileUsernameText"
+            app:layout_constraintTop_toBottomOf="@+id/profileUsernameText" />
 
         <EditText
-            android:id="@+id/usernameEditText"
+            android:id="@+id/profileUsernameText"
             style="@style/txtFields"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:drawableStart="@drawable/user_icon"
-            android:editable="false"
+            android:inputType="textPersonName"
+
             android:enabled="false"
             android:hint="@string/username"
-            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/mainInfoLabel"
             app:layout_constraintTop_toBottomOf="@+id/mainInfoLabel" />
 
         <EditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/profilePasswordText"
             style="@style/txtFields"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+            app:layout_constraintTop_toBottomOf="@+id/profilePasswordText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
