--- a/app/src/main/res/layout/meal_card.xml
+++ b/app/src/main/res/layout/meal_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mealCard"
-    android:layout_width="200dp"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:backgroundTint="@color/white"
@@ -33,10 +33,10 @@
             android:id="@+id/meal_card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="Chiecken Grilled"
             android:textColor="@color/black"
-            android:textSize="24dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_meal_img" />
@@ -45,12 +45,12 @@
             android:id="@+id/meal_card_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:text="Lunch"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/meal_card_title" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/ratingBar_card"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar_card" />
 
         <RatingBar
             android:id="@+id/ratingBar_card"
@@ -59,10 +59,8 @@
             android:layout_height="wrap_content"
             android:rating="4"
             android:theme="@style/RatingBar"
-            app:layout_constraintBottom_toBottomOf="@+id/meal_card_category"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/meal_card_category"
-            app:layout_constraintTop_toTopOf="@+id/meal_card_category" />
+            app:layout_constraintStart_toStartOf="@+id/meal_card_title"
+            app:layout_constraintTop_toBottomOf="@+id/meal_card_title" />
 
         <Button
             android:id="@+id/card_add_to_fav"
