--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
 
 
     <style name="RatingBar" parent="Theme.AppCompat">
-        <item name="colorControlNormal">@color/icon_color</item>
+        <item name="colorControlNormal">@color/neutral</item>
         <item name="colorControlActivated">@color/primary</item>
     </style>
 
@@ -72,6 +72,12 @@
         <item name="backgroundTint">#FF9900</item>
         <item name="cornerRadius">8dp</item>
         <item name="android:padding">8dp</item>
+    </style>
+
+
+    <style name="AppBarLayoutTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="colorControlNormal">@color/primary</item>
+        <item name="titleTextColor">@color/primary</item>
     </style>
 
 </resources>
