show categories in search screen

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -32,7 +32,7 @@
                 android:background="@color/primary" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardSearch"
+                android:id="@+id/searchTextCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -57,10 +57,11 @@
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPagerHeader"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_below="@id/cardSearch"
-                android:layout_marginTop="10dp"
-                android:clipToPadding="false"
+                android:layout_height="200dp"
+                android:layout_below="@id/searchTextCard"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:foregroundGravity="center"
                 android:overScrollMode="never" />
 
