--- a/app/src/main/res/layout/item_recycler_meal.xml
+++ b/app/src/main/res/layout/item_recycler_meal.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mealRecyclerCard"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_margin="5dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -52,8 +54,8 @@
 
                 <TextView
                     android:id="@+id/meal_card_category2"
-                    android:layout_width="39dp"
-                    android:layout_height="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/neutral"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@+id/ratingBar_card2"
