--- a/app/src/main/res/layout/fragment_second_screen.xml
+++ b/app/src/main/res/layout/fragment_second_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/neutral"
-    tools:context=".onboarding.screens.SecondScreenFragment">
+    tools:context=".onboarding.view.screens.SecondScreenFragment">
 
 
     <com.airbnb.lottie.LottieAnimationView
