implement search by three filter

--- a/app/src/main/res/layout/fragment_country.xml
+++ b/app/src/main/res/layout/fragment_country.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".category.view.CategoryFragment">
+    tools:context=".country.view.CountryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categoryRecyclerView"
+        android:id="@+id/countryRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -16,7 +16,7 @@
         android:layout_marginBottom="100dp" />
 
     <ProgressBar
-        android:id="@+id/categoryProgressBar"
+        android:id="@+id/countryProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
