--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="5dp"
-    android:fitsSystemWindows="true"
-    tools:context=".category.view.CategoryActivity">
+    tools:context=".ingredient.view.IngredientActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/categoryAppbar"
+        android:id="@+id/ingredientAppbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppBarLayoutTheme"
@@ -20,13 +16,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/categoryToolbar"
+            android:id="@+id/ingredientToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <com.google.android.material.tabs.TabLayout
-            android:id="@+id/categoryTabLayout"
+            android:id="@+id/ingredientTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabContentStart="85dp"
@@ -36,12 +32,12 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/categoryViewPager"
+        android:id="@+id/ingredientViewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FEFEFE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryAppbar" />
+        app:layout_constraintTop_toBottomOf="@+id/ingredientAppbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
