add meals to schedule

--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -5,7 +5,7 @@
     android:id="@+id/favouritesLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.favourites.view.FavouritesFragment" >
+    tools:context=".appNavigation.favourites.view.FavouritesFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favRecycler"
