--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,9 +37,10 @@
                 style="@style/Headers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/Categories" />
+                android:text="@string/trending" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/trendingRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
