--- a/app/src/main/res/layout/activity_meal_details.xml
+++ b/app/src/main/res/layout/activity_meal_details.xml
@@ -60,14 +60,25 @@
                     app:layout_constraintStart_toStartOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+                <ImageButton
+                    android:id="@+id/addMealBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/transparent_extra"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/calender_icon" />
+
                 <TextView
                     android:id="@+id/mealName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="52dp"
+                    android:layout_marginStart="28dp"
                     android:layout_marginTop="4dp"
                     android:text="TextView"
-                    android:textAlignment="center"
+                    android:textAlignment="viewStart"
+                    app:layout_constraintEnd_toStartOf="@+id/addMealBtn"
+                    app:layout_constraintHorizontal_bias="0.045"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:text="TextView"
+                    android:textAlignment="viewStart"
                     app:layout_constraintEnd_toEndOf="@+id/mealName"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -122,7 +134,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginBottom="16dp"
+                />
 
         </LinearLayout>
     </ScrollView>
