--- a/app/src/main/res/layout/calender_item_card.xml
+++ b/app/src/main/res/layout/calender_item_card.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mealRecyclerCard"
+    android:id="@+id/calenderCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_marginStart="32dp"
-    android:layout_marginEnd="32dp"
+    android:layout_height="200dp"
+    android:layout_margin="5dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -20,22 +19,11 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/mealThumb"
+            android:id="@+id/calmealThumb"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/background" />
-
-        <ImageButton
-            android:id="@+id/favBtnn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/primary"
-            app:srcCompat="@drawable/heart_icon" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/view"
@@ -44,13 +32,14 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="120dp"
             app:cardBackgroundColor="#80000000">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
 
                 <TextView
-                    android:id="@+id/mealName"
+                    android:id="@+id/calName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -64,9 +53,9 @@
                     tools:text="@string/meal_categories" />
 
                 <TextView
-                    android:id="@+id/meal_card_category2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/calCategory"
+                    android:layout_width="39dp"
+                    android:layout_height="15dp"
                     android:textColor="@color/neutral"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@+id/ratingBar_card2"
@@ -80,15 +69,14 @@
                     android:layout_height="wrap_content"
                     android:rating="4"
                     android:theme="@style/RatingBar"
-                    app:layout_constraintStart_toStartOf="@+id/mealName"
-                    app:layout_constraintTop_toBottomOf="@+id/mealName" />
+                    app:layout_constraintStart_toStartOf="@+id/calName"
+                    app:layout_constraintTop_toBottomOf="@+id/calName" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.cardview.widget.CardView>
-
         <!--            android:background="@drawable/shadow_for_love_white"-->
 
 
