--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -18,12 +18,12 @@
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/favouritesFragment"
-        android:name="com.example.foodplanner.auth.favourites.view.FavouritesFragment"
+        android:name="com.example.foodplanner.appNavigation.favourites.view.FavouritesFragment"
         android:label="@string/title_favourites"
         tools:layout="@layout/fragment_favourites" />
     <fragment
         android:id="@+id/calenderFragment"
-        android:name="com.example.foodplanner.appNavigation.calender.CalenderFragment"
+        android:name="com.example.foodplanner.appNavigation.calender.view.CalenderFragment"
         android:label="@string/title_calender"
         tools:layout="@layout/fragment_calender" />
     <fragment
